--- a/proyecto_final/avance/avance.tex
+++ b/proyecto_final/avance/avance.tex
@@ -159,15 +159,17 @@ hogar \citep{Coelho}.
 
 \subsection{Robots de locomoción diferencial}
 
-Los robots de ruedas diferenciales, son aquellos donde su locomoción está basada en dos (o más) ruedas motrices fijas controladas independientemente, dichas ruedas son las que proporcionan fuerza de tracción al robot. La relación entre ellas es la que determina la trayectoria que va a seguir el robot \citep{Saifizi} . Estos robots son no holónomos por lo tanto son sistemas con restricciones en las velocidades no integrables, es decir no es posible expresarlas, exclusivamente, en término de las posiciones \citep{Freire}.
+Los robots de ruedas diferenciales, son aquellos donde su locomoción está basada en dos (o más) ruedas motrices fijas controladas independientemente, dichas ruedas son las que proporcionan fuerza de tracción al robot. La relación entre ellas determina la trayectoria que seguirá el robot \citep{Saifizi} . Estos robots son no holónomos por lo tanto son sistemas con restricciones en las velocidades no integrables, es decir no es posible expresarlas, exclusivamente, en término de las posiciones \citep{Freire}.
 \\
 
 Algunas de las ventajas de estos sistemas de dos ruedas es que son más baratos, son fáciles de implementar y tienen un diseño simple, por otro lado son un poco más dificiles de controlar ya que son estáticamente inestables y requiere un control de precisión para trayectorias rectas \citep{sis_locomocion} \\.
 
-El modelo de robot que se estudia en el presente trabajo se supone con dos motores independientes, cada uno controlando una rueda, colocados a lo ancho  del eje central del robot. Se asume además su movimiento únicamente en dos dimensiones, por lo que se considera con una tercera rueda que no aporta ningún movimiento adicional (rueda loca o de castor) para que sea estable \citep{KarlStol}, además se considera que no hay deformación en la rueda y que se cumple la condición de rodamiento puro.
+El modelo de robot estudiado en el presente trabajo se supone con dos motores independientes, cada uno controlando una rueda, colocados a lo largo  del eje y del robot mostrado en la figura \ref{}. Se asume además su movimiento únicamente en dos dimensiones, por lo que se considera con una tercera rueda que no aporta ningún movimiento adicional (rueda loca o de castor) para que sea estable \citep{KarlStol}, además se considera que no hay deformación en la rueda y que se cumple la condición de rodamiento puro.
 
 
- 
+\begin{figure}
+
+\end{figure}
  
 \subsection{Método de linealización}
 Los sistemas en estudio son intrínsicamente no lineales \citep{Sayidmarie}. De esta manera, para
