--- a/proyecto_final/avance/informe_ref.bib
+++ b/proyecto_final/avance/informe_ref.bib
@@ -174,7 +174,7 @@ timestamp = {2014.01.01}
 
 @ARTICLE{Saifizi,
   author = {Saifizi M., Desa H., Noor R. },
-  title = {A Differential Steering Control with Proportional Controller for An Autonomous Mobile Robot},
+  title = {A Differential Steering Conantrol with Proportional Controller for An Autonomous Mobile Robot},
   year = {2011}
 }
 
