--- a/proyecto_final/reporte/informe_ref.bib
+++ b/proyecto_final/reporte/informe_ref.bib
@@ -165,12 +165,26 @@ timestamp = {2014.01.01}
 
 @ARTICLE{Collazo,
   author = {Collazo J. , Gorrostieta E. , Pedraza J. y Villaseñor U. y Romero R. y González M. },
-  title = {Modelación de un Robot Móvil de Dos Ruedas con
-Tracción Diferencia},
+  title = {Modelación de un Robot Móvil de Dos Ruedas con Tracción Diferencia},
   year = {2009},
   url = "http://www.mecamex.net/anterior/cong08/articulos/58.pdf",
   note = "Consultado el 14 de mayo del 2016",
-timestamp = {2009.11.26}
+  timestamp = {2009.11.26}
+}
+
+@ARTICLE{Saifizi,
+  author = {Saifizi M., Desa H., Noor R. },
+  title = {A Differential Steering Conantrol with Proportional Controller for An Autonomous Mobile Robot},
+  year = {2011}
+}
+
+@ARTICLE{Freire,
+  author = {Freire E.,Galan J.,Molina M.}, 
+  title = {Comportamiento dinámico de un sistema no holónomo: El sistema de Heisenberg modificado},
+  year = {2009},
+  url="http://matematicas.uclm.es/cedya09/archive/textos/127_Molina-Becerra-M.pdf",
+  note = "Consultado el 18 de junio del 2016",
+  timestamp = {2009.09.21}
 }
 
 @BOOK{Buck,
@@ -182,6 +196,13 @@ timestamp = {2009.11.26}
   timestamp = {2003}
 }
 
+@misc{sis_locomocion,
+  title = {Sistemas de locomoción de robots móviles},
+  url  = "http://www.esi2.us.es/~vivas/ayr2iaei/LOC_MOV.pdf",
+  note = "Consultado el 18 de junio del 2016",
+  timestamp = {2009}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
@@ -189,4 +210,3 @@ timestamp = {2009.11.26}
 @comment{jabref-meta: selector_journal:}
 
 @comment{jabref-meta: selector_keywords:}
-
