--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -52,9 +52,15 @@
 %las siguientes son las secciones iniciales del informe
 
 %Esto hay que revisarlo!
-
-Los robots móviles son muy importantes porque permiten sistemas más flexibles. Además abren toda un área de la robótica que es el problema de localización%referencias.
-En este documento se analiza el caso específico de un robot diferencial, este es un sistema que se moviliza en el plano xy debido a la acción de dos ruedas que funcionan de manera independiente. El principal objetivo es la obtención de un modelo cinemático directo, un modelo cinemático inverso, y un modelo dinámico que describa el sistema real. Se realizaron simulaciones, para verificar que la respuesta del modelo sea la esperada. 
+\section{Resumen}
+Los robots móviles son muy importantes porque permiten sistemas más flexibles, abriendo toda un área
+de la robótica que involucra el problema de la localización%referencias.
+En el presente documento se analiza el caso específico de un robot diferencial, el cual es un sistema que
+se moviliza en el plano xy debido a la acción de dos ruedas que funcionan de manera
+independiente. Se lleva a cabo la obtención de un modelo cinemático directo, un modelo cinemático
+inverso, y un modelo dinámico que describe las consideraciones energéticas del sistema. Se
+realizaron las simulaciones correspondientes para cada modelo, para luego analizar la respuesta
+ del movimiento del sistema a las entradas respectivas. 
 
 %-------------------
 %tablas de contenido (* si alguna no se ocupa se puede ``comentar'' (%) para que no aparezca)
