--- a/proyecto_final/reporte/reporte.tex
+++ b/proyecto_final/reporte/reporte.tex
@@ -532,6 +532,93 @@ Para analizar el comportamiento del centro geométrico del robot, y el punto desp
 \label{eq:desplazado_contra_centro}
 \end{equation}
 
+\subsection{Modelo dinámico}
+La obtención del modelo dinámico se fundamenta en la aplicación del método de Euler-Lagrange
+considerando las restricciones propias del sistema del robot diferencial de dos ruedas. Se
+consideran entonces las siguientes suposiciones:
+\begin{itemize}
+\item El robot no se desliza hacia los lados, de modo que solo se puede desplazar en la dirección
+  definida por el frente del mismo.
+\item La rapidez traslacional del robot sobre el punto en donde se ubica cada rueda, es igual a la
+  rapidez tangencial de la rueda respectiva en contacto con el suelo, lo cual corresponde a la
+  condición de rodadura.
+\item El robot sólamente puede perder energía debido a la fricción en los ejes de cada rueda, la
+  cual se considera viscosa para simplificar la obtención del modelo.
+\item El movimiento que describe el robot se lleva a cabo sobre una superficie plana, de manera que
+  no hay cambios energéticos debidos a la acción del campo gravitacional terrestre sobre el robot.
+\item El cuerpo del vehículo es no deformable, de modo que no se acumula energía potencial debido a
+  elasticidad ni se dan pérdidas de energía debido a la deformación de las llantas o el cuerpo del
+  robot.
+\item No se consideran las limitaciones relacionadas con la potencia máxima que pueden entregar los motores
+  de cada rueda, de manera que los mismos pueden generar pares de torsión muy grandes que cambian de
+  manera abrupta. %REVISAR!!!!!!!!!! 
+\end{itemize}
+
+A partir de la condición de no deslizamiento hacia los lados, se obtiene que el componente de la
+velocidad traslacional del centro geométrico que es perpendicular a la recta descrita por el frente del
+robot (definida por el ángulo de orientación $thetta$), es nulo, lo cual se muestra en la ecuación
+(***).
+
+%ECUACIÓN RESTRICCION NO DESLIZAMIENTO LATERAL
+
+
+Para la rueda derecha, se tiene que la magnitud de su velocidad tangencial es
+$v_{Tr} = r\dot{\varphi_r}$, en donde $r$ es el radio de cada rueda y $\dot{\varphi_r}$ es la
+velocidad angular de un punto de la rueda. 
+
+Por otro lado, la magnitud de la velocidad traslacional del punto en donde se encuentra ubicada la
+rueda derecha sobre el vehículo es $v_{Pr}=\dot{x}\cos(\theta)+\dot{y}sen(\theta)+b\dot{\theta}$, en
+donde el término $\dot{x}\cos(\theta)+\dot{y}sen(\theta)$ es la rapidez traslacional del centro del
+vehículo, y el término $b\dot{\theta}$ corresponde al aporte en la velocidad dado por la rotación
+del robot, el cual se suma porque el giro en la dirección positiva de incremento de $\theta$
+(contraria a las manecillas del reloj) favorece el movimiento hacia adelante de la rueda derecha. De
+la restricción de rodamiento de las ruedas, se tiene que $v_{Tr}=v_{Pr}$, lo cual se muestra en la
+ecuación (***).
+
+%ECUACIÓN RODADURA RUEDA DERECHA
+
+De manera análoga, para la rueda izquierda se tiene que $v_{Tl} = r\dot{\varphi_l}$ y que
+$v_{Pr}=\dot{x}\cos(\theta)+\dot{y}sen(\theta)-b\dot{\theta}$, en donde el aporte en la velocidad
+dada por la rotación del robot ($b\dot{\theta}$) se resta porque el giro en la dirección positiva de
+incremento de $\theta$ se opone al movimiento hacia adelante de la rueda izquierda. De la misma
+forma que para la rueda derecha, la restricción de rodamiento implica que se cumple que
+$v_{Tl}=v_{Pl}$, lo cual se presenta en la ecuación (***).
+
+%ECUACIÓN RODADURA RUEDA IZQUIERDA
+
+Con respecto a las restricciones descritas por las ecuaciones (***), (***) y (***), denominadas
+$f_1$, $f_2$ y $f_3$ respectivamente, se conoce que las mismas corresponden a restricciones no
+holonómicas (***Sarkar), ya que establecen condiciones sobre las derivadas de las coordenadas
+generalizadas a utilizar para el método de Euler-Lagrange, las cuales corresponden a $x$, $y$, $\theta$,
+$\varphi_r$ y $\varphi_l$. 
+
+Estas restricciones no holonómicas estan asociadas a fuerzas generalizadas que mantienen el
+movimiento bajo dichas condiciones (***REF), las cuales dependen de multiplicadores de Lagrange
+tal como se muestra en la ecuación (***), y que en este caso son $\lambda_1$, $\lambda_2$ y
+$\lambda_3$, correspondientes a $f_1$, $f_2$ y $f_3$ respectivamente. Dichas fuerzas generalizadas
+modifican la ecuación de Lagrange para cada coordenada, tal como se describe en la ecuación (***) y
+de las cuales se obtendrá el modelo en variables de estado.
+
+Para el método de Lagrange, se tiene en primer lugar que la energía potencial asociada al sistema es
+constante, ya que el robot se mueve en un plano horizontal y no se consideran las posibles
+deformaciones elásticas del vehículo. De esta forma, el término que está asociado al cambio en la
+energía potencial en la ecuación de Lagrange (***Lagrange+Restricciones) para cada coordenada es
+cero ($\frac{\partial U}{\partial q_i} = 0$), de lo que se obtiene la ecuación
+\ref{eq:lagrange_restrict_final}, la cual se utilizará para la obtención de las ecuaciones del
+movimiento del sistema
+
+\begin{equation}
+  \frac{d}{dt}\left( \frac{\partial K}{\partial \dot{q_i}}\right) - \frac{\partial K}{\partial
+    q_i} = Q_i + \sum_{k=1}^3 \lambda_k \frac{\partial f_k}{\partial \dot{q_i}}
+  \label{eq:lagrange_restrict_final}
+\end{equation}
+
+
+
+
+ 
+
+
 
 \section{Análisis}
 
